--- a/package.json
+++ b/package.json
@@ -24,13 +24,12 @@
   },
   "homepage": "https://github.com/EVE-China/sde#readme",
   "dependencies": {
-    "@types/axios": "^0.14.0",
     "@types/cheerio": "^0.22.30",
-    "@types/extract-zip": "^2.0.1",
     "@types/js-yaml": "^4.0.3",
     "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.3",
     "extract-zip": "^2.0.1",
+    "debug": "^4.3.1",
     "js-yaml": "^4.1.0"
   },
   "devDependencies": {
