--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.3",
     "extract-zip": "^2.0.1",
-    "js-yaml": "^4.1.0"
+    "js-yaml": "^4.1.0",
+    "sqlite3": "^5.0.2"
   },
   "devDependencies": {
     "@types/node": "^16.7.1",
