--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -34,9 +34,13 @@ jobs:
       id: git-check
       run: echo ::set-output name=modified::$(if git status | grep "nothing to commit"; then echo "false"; else echo "true"; fi)
     - name: Push changes
-      if: steps.git-check.outputs.modified == 'true'
+      if: ${{ success() }} && steps.git-check.outputs.modified == 'true'
       run: |
            git config --global user.name 'fantasy0v0[Bot]'
            git config --global user.email 'fantasy0v0@users.noreply.github.com'
            git commit -am "Automated Commit."
            git push
+    - uses: actions/upload-artifact@v2
+      if: ${{ success() }}
+      with:
+        path: dist/publish
