--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@types/cheerio": "^0.22.30",
     "@types/js-yaml": "^4.0.3",
+    "@types/sqlite3": "^3.1.7",
     "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.3",
     "extract-zip": "^2.0.1",
