当dist/publish没有产生文件时, 不会发出警告

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -33,4 +33,5 @@ jobs:
     - uses: actions/upload-artifact@v2
       if: ${{ success() }}
       with:
+        if-no-files-found: ignore
         path: dist/publish
