由于artifact有有效期, 所以修改为一星期更新一次。

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -34,4 +34,6 @@ jobs:
       if: ${{ success() }}
       with:
         if-no-files-found: ignore
+        name: sde
         path: dist/publish
+        retention-days: 14
